@@ -1,17 +1,21 @@
 package br.org.edu.ifrn.LojaCarro.controllers;
 
 import br.org.edu.ifrn.LojaCarro.model.Carro;
+import br.org.edu.ifrn.LojaCarro.security.CustomUserDetailsService;
+import br.org.edu.ifrn.LojaCarro.security.JwtFilter;
+import br.org.edu.ifrn.LojaCarro.security.JwtService;
 import br.org.edu.ifrn.LojaCarro.services.CarroService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.web.servlet.MockMvc;
-
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
@@ -20,25 +24,38 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(CarroController.class)
+@AutoConfigureMockMvc(addFilters = false)
 class CarroControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
-    private CarroService carroService;
-
     @Autowired
     private ObjectMapper objectMapper;
 
+    @MockBean
+    private CarroService carroService;
+
+    // ADICIONE ESTES MOCKS
+    @MockBean
+    private JwtFilter jwtFilter;
+
+    @MockBean
+    private JwtService jwtService;
+
+    @MockBean
+    private CustomUserDetailsService customUserDetailsService;
+
     @Test
     void deveSalvarCarro() throws Exception {
+
         Carro carro = new Carro();
         carro.setId(1L);
         carro.setModelo("Civic");
         carro.setAno(2022);
 
-        when(carroService.save(any(Carro.class))).thenReturn(carro);
+        when(carroService.save(any(Carro.class)))
+                .thenReturn(carro);
 
         mockMvc.perform(post("/carro/salvar")
                         .contentType("application/json")
@@ -47,12 +64,11 @@ class CarroControllerTest {
                 .andExpect(jsonPath("$.id").value(1))
                 .andExpect(jsonPath("$.modelo").value("Civic"))
                 .andExpect(jsonPath("$.ano").value(2022));
-
-        verify(carroService, times(1)).save(any(Carro.class));
     }
 
     @Test
     void devePesquisarCarroPorId() throws Exception {
+
         Carro carro = new Carro();
         carro.setId(1L);
         carro.setModelo("Civic");
@@ -64,40 +80,37 @@ class CarroControllerTest {
         mockMvc.perform(get("/carro/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.modelo").value("Civic"));
-
-        verify(carroService, times(1)).findById(1L);
     }
 
     @Test
     void deveRetornarNotFoundAoPesquisarCarroInexistente() throws Exception {
+
         when(carroService.findById(1L))
                 .thenReturn(Optional.empty());
 
         mockMvc.perform(get("/carro/1"))
                 .andExpect(status().isNotFound());
-
-        verify(carroService, times(1)).findById(1L);
     }
 
     @Test
     void deveListarTodosCarros() throws Exception {
+
         Carro carro = new Carro();
         carro.setId(1L);
         carro.setModelo("Civic");
         carro.setAno(2022);
 
         when(carroService.findAll())
-                .thenReturn(Arrays.asList(carro));
+                .thenReturn(List.of(carro));
 
         mockMvc.perform(get("/carro"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].modelo").value("Civic"));
-
-        verify(carroService, times(1)).findAll();
     }
 
     @Test
     void deveAtualizarCarro() throws Exception {
+
         Carro carro = new Carro();
         carro.setId(1L);
         carro.setModelo("Corolla");
@@ -111,17 +124,26 @@ class CarroControllerTest {
                         .content(objectMapper.writeValueAsString(carro)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.modelo").value("Corolla"));
-
-        verify(carroService, times(1)).update(any(Carro.class));
     }
 
     @Test
     void deveDeletarCarro() throws Exception {
+
         doNothing().when(carroService).deleteById(1L);
 
         mockMvc.perform(delete("/carro/1"))
                 .andExpect(status().isNoContent());
+    }
+    @Test
+    void deveRetornarBadRequestQuandoModeloVazio() throws Exception {
 
-        verify(carroService, times(1)).deleteById(1L);
+        Carro carro = new Carro();
+        carro.setModelo("");
+        carro.setAno(2024);
+
+        mockMvc.perform(post("/carro/salvar")
+                        .contentType("application/json")
+                        .content(objectMapper.writeValueAsString(carro)))
+                .andExpect(status().isBadRequest());
     }
 }
